Updated favicon and logos

--- a/documents/changes.html
+++ b/documents/changes.html
@@ -33,7 +33,7 @@
             </header>
 
             <ul>
-              <li>[09.10.2016] Nothing yet.</li>
+              <li>[28.10.2016] Changed logo.</li>
             </ul>
           </section>
         </main>
