--- a/index.html
+++ b/index.html
@@ -23,23 +23,23 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono|Roboto+Slab">
 
     <!-- Favicon and stuff -->
-    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" href="favicon/favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="favicon/favicon-16x16.png" sizes="16x16">
-    <link rel="manifest" href="favicon/manifest.json">
-    <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#cc0000">
-    <link rel="shortcut icon" href="favicon/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png?v=Om5QWMBdJg">
+    <link rel="icon" type="image/png" href="/favicon/favicon-32x32.png?v=Om5QWMBdJg" sizes="32x32">
+    <link rel="icon" type="image/png" href="/favicon/favicon-16x16.png?v=Om5QWMBdJg" sizes="16x16">
+    <link rel="manifest" href="/favicon/manifest.json?v=Om5QWMBdJg">
+    <link rel="mask-icon" href="/favicon/safari-pinned-tab.svg?v=Om5QWMBdJg" color="#5bbad5">
+    <link rel="shortcut icon" href="/favicon/favicon.ico?v=Om5QWMBdJg">
     <meta name="apple-mobile-web-app-title" content="Build-a-PC">
     <meta name="application-name" content="Build-a-PC">
-    <meta name="msapplication-config" content="favicon/browserconfig.xml">
-    <meta name="theme-color" content="#ffffff">
+    <meta name="msapplication-config" content="/favicon/browserconfig.xml?v=Om5QWMBdJg">
+    <meta name="theme-color" content="#444444">
   </head>
 
   <body>
     <div class="site-container">
     <div class="site-header-container">
       <div class="site-header">
-        <img class="site-header-logo" src="images/logo.gif" alt="logo" />
+        <img class="site-header-logo" src="images/logo/logo_white_64.png" alt="logo" />
         <p class="site-header-title"><a href=".">Build-a-PC</a></p>
         <p class="site-header-sub-title">by Ad Infinitum</p>
       </div>
@@ -108,14 +108,16 @@
           <div class="site-footer-box">
             <p><b>About</b></p>
             <p><i>Lorem ipsum dolor sit amet</i></p>
-			<input type="text" name="search" placeholder="Search.." id="search"><br>
+            <input id="search" type="text" name="search" placeholder="Search ..."><br>
           </div>
 
           <div class="site-footer-box">
             <p><b>Links</b></p>
             <ul>
+              <li><a href="?page=sitemap">Site map</a></li>
               <li><a href="documents/">Project documents</a></li>
               <li><a href="https://github.com/build-a-pc/build-a-pc.github.io">Repository</a></li>
+              <li><a href="https://github.com/build-a-pc/build-a-pc.github.io/issues/new">Report a problem</a></li>
             </ul>
           </div>
 
