--- a/pages/home.inc.html
+++ b/pages/home.inc.html
@@ -20,7 +20,7 @@
       </header>
 
       <figure class="float-right">
-        <img src="/images/logo/logo_256.gif" />
+        <img width="256px" src="/images/logo/logo_512.png" />
         <figcaption>Figure test</figcaption>
       </figure>
 
