--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
         <div class="site-footer">
           <div class="site-footer-box">
             <p><b>About</b></p>
-            <p><i>Lorem ipsum dolor sit amet</i></p>
-            <input id="search" type="text" name="search" placeholder="Search ..."><br>
+            <p>Search</p>
+            <input id="search" type="text" name="search" placeholder="Search ...">
           </div>
 
           <div class="site-footer-box">
@@ -121,7 +121,7 @@
             </ul>
           </div>
 
-          <p class="copyright">Copyright &copy; 2016 <a href="https://github.com/build-a-pc">github.com/build-a-pc</a></p>
+          <p class="copyright">Copyright &copy; 2016 <a href="https://github.com/build-a-pc">github.com/build-a-pc</a> [<a href="https://opensource.org/licenses/MIT">MIT License</a>]</p>
         </div>
       </div>
     </div>
