--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             </ul>
           </div>
 
-          <p class="copyright">Copyright &copy; 2016 <a href="https://github.com/build-a-pc">github.com/build-a-pc</a> [<a href="https://opensource.org/licenses/MIT">MIT License</a>]</p>
+          <p class="copyright">Copyright &copy; 2016 <a href="https://github.com/build-a-pc">github.com/build-a-pc</a></p>
         </div>
       </div>
     </div>
