--- a/pages/error/404.inc.html
+++ b/pages/error/404.inc.html
@@ -19,7 +19,7 @@
         <h1><a href="#error-404">[404] Page Not Found</a></h1>
       </header>
 
-      <p>No PCs found here, <a href=".">rewind.</a></p>
+      <p>No PC building found here, <a href=".">go back</a>.</p>
     </section>
   </body>
 </html>
