Commented some files and fixed an AJAX history popState bug.

--- a/documents/p3_changes.html
+++ b/documents/p3_changes.html
@@ -5,10 +5,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Changes" />
+    <meta name="description" content="Document P3: Changes" />
     <meta name="author" content="H&aring;vard, Runar, Petter, Thomas" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Changes</title>
+    <title>P3 Changes</title>
     <!-- Style normalizer: Normalize.css -->
     <link rel="stylesheet" type="text/css" href="style/normalize.css" />
     <!-- Website style -->
@@ -20,16 +20,24 @@
   <body>
     <div class="outer-container">
       <div class="banner">
-        <p class="banner-title"><a href="#">Changes</a></p>
+        <p class="banner-title"><a href="#">P3 Changes</a></p>
         <p class="banner-sub-title">H&aring;vard, Petter, Runar, Thomas</p>
-        <p class="banner-date">Autumn 2016</p>
+        <p class="banner-date"><span style="background-color: red;">DATE</span></p>
       </div>
 
       <div class="inner-container">
         <main>
-          <section id="changes">
+          <section id="fulfillment">
             <header>
-              <h1><a href="#changes">Changes</a></h1>
+              <h1><a href="#fulfillment">Fulfillment of Requirements</a></h1>
+            </header>
+
+            <p>How did each member fulfill their requirements; who worked on which files, who produces artwork; indicate how the modularity requirement was handled and who implemented it.</p>
+          </section>
+
+          <section id="list-of-changes">
+            <header>
+              <h1><a href="#list-of-changes">List of changes</a></h1>
             </header>
 
             <ul>
