--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<!--
+FILE NAME: index.html
+WRITTEN BY: H&aring;vard, Runar, Petter, Thomas
+WHEN: 2016 autumn
+PORPOSE: Contains layout, includes everything, loads content pages via AJAX.
+-->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -107,8 +114,7 @@
       <div id="site-footer-container">
         <div id="site-footer">
           <div class="site-footer-box">
-            <p><b>About</b></p>
-            <p>Search</p>
+            <p><b>Search</b></p>
             <input id="search" type="text" name="search" placeholder="Search ...">
           </div>
 
