--- a/documents/p4_testing.html
+++ b/documents/p4_testing.html
@@ -5,10 +5,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Project documents" />
-    <meta name="author" content="H&aring;vard, Petter, Runar, Thomas" />
+    <meta name="description" content="Document P3: Testing" />
+    <meta name="author" content="H&aring;vard, Runar, Petter, Thomas" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Project Documents</title>
+    <title>P4 Testing</title>
     <!-- Style normalizer: Normalize.css -->
     <link rel="stylesheet" type="text/css" href="style/normalize.css" />
     <!-- Website style -->
@@ -20,22 +20,19 @@
   <body>
     <div class="outer-container">
       <div class="banner">
-        <p class="banner-title"><a href="#">Project Documents</a></p>
+        <p class="banner-title"><a href="#">P4 Testing</a></p>
         <p class="banner-sub-title">H&aring;vard, Petter, Runar, Thomas</p>
-        <p class="banner-date">Autumn 2016</p>
+        <p class="banner-date"><span style="background-color: red;">DATE</span></p>
       </div>
 
       <div class="inner-container">
         <main>
-         <section id="documents">
+          <section id="wip">
             <header>
-              <h1><a href="#documents">Documents</a></h1>
+              <h1><a href="#wip">WIP</a></h1>
             </header>
 
-            <p><a href="p1_requirements.html">P1: Project Requirements</a></p>
-            <p><a href="p2_design.html">P2: Project Design</a></p>
-            <p><a href="p3_changes.html">P3: Changes</a></p>
-            <p><a href="p4_testing.html">P4: Testing</a></p>
+            <p>WIP</p>
           </section>
         </main>
       </div>
