--- a/documents/p3_changes.html
+++ b/documents/p3_changes.html
@@ -42,6 +42,8 @@
 
             <ul>
               <li>[28.10.2016] Changed logo.</li>
+              <li>[31.10.2016] The highlighting feature was dropped, because its use was limited and it required very little JavaScript coding
+                Runar, which was assigned to this task, will instead implement the quiz validation feature which originally was assigned to Petter.</li>
             </ul>
           </section>
         </main>
