--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@ PORPOSE: Contains layout, includes everything, loads content pages via AJAX.
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono|Roboto+Slab">
 
     <!-- Favicon and stuff -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png?v=Om5QWMBdJg">
-    <link rel="icon" type="image/png" href="/favicon/favicon-32x32.png?v=Om5QWMBdJg" sizes="32x32">
-    <link rel="icon" type="image/png" href="/favicon/favicon-16x16.png?v=Om5QWMBdJg" sizes="16x16">
-    <link rel="manifest" href="/favicon/manifest.json?v=Om5QWMBdJg">
-    <link rel="mask-icon" href="/favicon/safari-pinned-tab.svg?v=Om5QWMBdJg" color="#5bbad5">
-    <link rel="shortcut icon" href="/favicon/favicon.ico?v=Om5QWMBdJg">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png?v=Om5QWMBdJg">
+    <link rel="icon" type="image/png" href="favicon/favicon-32x32.png?v=Om5QWMBdJg" sizes="32x32">
+    <link rel="icon" type="image/png" href="favicon/favicon-16x16.png?v=Om5QWMBdJg" sizes="16x16">
+    <link rel="manifest" href="favicon/manifest.json?v=Om5QWMBdJg">
+    <link rel="mask-icon" href="favicon/safari-pinned-tab.svg?v=Om5QWMBdJg" color="#5bbad5">
+    <link rel="shortcut icon" href="favicon/favicon.ico?v=Om5QWMBdJg">
     <meta name="apple-mobile-web-app-title" content="Build-a-PC">
     <meta name="application-name" content="Build-a-PC">
-    <meta name="msapplication-config" content="/favicon/browserconfig.xml?v=Om5QWMBdJg">
+    <meta name="msapplication-config" content="favicon/browserconfig.xml?v=Om5QWMBdJg">
     <meta name="theme-color" content="#444444">
   </head>
 
