Added and linked all pages

--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@ PORPOSE: Contains layout, includes everything, loads content pages via AJAX.
               <a class="top" href="#">Parts</a>
               <ul>
                 <li><a href="?section=parts">Parts</a></li>
-                <li><a href="#">Motherboard and CPU</a></li>
-                <li><a href="#">RAM and GPU</a></li>
-                <li><a href="#">Storage, network card, sound card</a></li>
-                <li><a href="#">Cooling, PSU, case</a></li>
-                <li><a href="#">Accessories</a></li>
+                <li><a href="?section=parts&amp;page=mb_gpu">Motherboard and GPU</a></li>
+                <li><a href="?section=parts&amp;page=storage_nic_sd">Storage, network card, sound card</a></li>
+                <li><a href="?section=parts&amp;page=cooling_psu_case">Cooling, PSU, case</a></li>
+                <li><a href="?section=parts&amp;page=accessories">Accessories</a></li>
+                <li><a href="?section=parts&amp;page=quiz">Quiz</a></li>
               </ul>
             </li>
 
@@ -75,7 +75,7 @@ PORPOSE: Contains layout, includes everything, loads content pages via AJAX.
               <a class="top" href="#">Part Vendors</a>
               <ul>
                 <li><a href="?section=vendors">Part Vendors</a></li>
-                <li><a href="#">... more pages?</a></li>
+                <li><a href="?section=vendors&amp;page=quiz">Quiz</a></li>
               </ul>
             </li>
 
@@ -83,9 +83,10 @@ PORPOSE: Contains layout, includes everything, loads content pages via AJAX.
               <a class="top" href="#">Operating Systems</a>
               <ul>
                 <li><a href="?section=oss">Operating Systems</a></li>
-                <li><a href="#">Windows</a></li>
-                <li><a href="#">Linux</a></li>
-                <li><a href="#">Macintosh</a></li>
+                <li><a href="?section=oss&amp;page=windows">Windows</a></li>
+                <li><a href="?section=oss&amp;page=linux">Linux</a></li>
+                <li><a href="?section=oss&amp;page=osx">Mac OS X</a></li>
+                <li><a href="?section=oss&amp;page=quiz">Quiz</a></li>
               </ul>
             </li>
 
@@ -93,8 +94,9 @@ PORPOSE: Contains layout, includes everything, loads content pages via AJAX.
               <a class="top" href="#">Assembling the PC</a>
               <ul>
                 <li><a href="?section=assembly">Assembling the PC</a></li>
-                <li><a href="#">Hardware</a></li>
-                <li><a href="#">Software</a></li>
+                <li><a href="?section=assembly&amp;page=hardware">Hardware</a></li>
+                <li><a href="?section=assembly&amp;page=software">Software</a></li>
+                <li><a href="?section=assembly&amp;page=quiz">Quiz</a></li>
               </ul>
             </li>
           </ul>
