--- a/pages/assembly/assembly.inc.html
+++ b/pages/assembly/assembly.inc.html
@@ -8,6 +8,10 @@
     <meta name="page" content="assembly" />
     <meta name="section_name" content="Assembling the PC" />
     <meta name="page_name" content="Assembling the PC" />
+    <meta name="prev_page_uri" content="?section=oss&amp;page=quiz" />
+    <meta name="prev_page_name" content="Operating Systems: Quiz" />
+    <meta name="next_page_uri" content="?section=assembly&amp;page?hardware" />
+    <meta name="next_page_name" content="Assembling the PC: Hardware" />
     <meta name="show_breadcrumbs" content="true" />
     <meta name="show_page_breadcrumb" content="false" />
     <title>Assembling the PC</title>
@@ -20,6 +24,13 @@
       </header>
 
       <p>Lorem ipsum dolor sit amet.</p>
+
+      <h2 id="subpages"><a href="#subpages">Pages</a></h2>
+      <ul>
+        <li><a href="?section=assembly&amp;page=hardware">Hardware</a></li>
+        <li><a href="?section=assembly&amp;page=software">Software</a></li>
+        <li><a href="?section=assembly&amp;page=quiz">Quiz</a></li>
+      </ul>
     </section>
   </body>
 </html>
