--- a/pages/error/404.inc.html
+++ b/pages/error/404.inc.html
@@ -8,6 +8,10 @@
     <meta name="page" content="404" />
     <meta name="section_name" content="Error" />
     <meta name="page_name" content="Error 404: Page Not Found" />
+    <meta name="prev_page_uri" content="" />
+    <meta name="prev_page_name" content="" />
+    <meta name="next_page_uri" content="" />
+    <meta name="next_page_name" content="" />
     <meta name="show_breadcrumbs" content="true" />
     <meta name="show_page_breadcrumb" content="true" />
     <title>Error 404</title>
