--- a/pages/oss/oss.inc.html
+++ b/pages/oss/oss.inc.html
@@ -8,6 +8,10 @@
     <meta name="page" content="oss" />
     <meta name="section_name" content="Operating Systems" />
     <meta name="page_name" content="Operating Systems" />
+    <meta name="prev_page_uri" content="?section=vendors" />
+    <meta name="prev_page_name" content="Part Vendors" />
+    <meta name="next_page_uri" content="?section=oss&amp;page=windows" />
+    <meta name="next_page_name" content="Operating Systems: Windows" />
     <meta name="show_breadcrumbs" content="true" />
     <meta name="show_page_breadcrumb" content="false" />
     <title>Operating Systems</title>
@@ -20,6 +24,14 @@
       </header>
 
       <p>Lorem ipsum dolor sit amet.</p>
+
+      <h2 id="subpages"><a href="#subpages">Pages</a></h2>
+      <ul>
+        <li><a href="?section=oss&amp;page=windows">Windows</a></li>
+        <li><a href="?section=oss&amp;page=linux">Linux</a></li>
+        <li><a href="?section=oss&amp;page=osx">Mac OS X</a></li>
+        <li><a href="?section=oss&amp;page=quiz">Quiz</a></li>
+      </ul>
     </section>
   </body>
 </html>
