--- a/pages/parts/parts.inc.html
+++ b/pages/parts/parts.inc.html
@@ -8,6 +8,10 @@
     <meta name="page" content="parts" />
     <meta name="section_name" content="Parts" />
     <meta name="page_name" content="Parts" />
+    <meta name="prev_page_uri" content="" />
+    <meta name="prev_page_name" content="" />
+    <meta name="next_page_uri" content="" />
+    <meta name="next_page_name" content="" />
     <meta name="show_breadcrumbs" content="true" />
     <meta name="show_page_breadcrumb" content="false" />
     <title>Parts</title>
@@ -20,6 +24,16 @@
       </header>
 
       <p>Lorem ipsum dolor sit amet.</p>
+
+      <h2 id="subpages"><a href="#subpages">Pages</a></h2>
+      <ul>
+        <li><a href="?section=parts&amp;page=cpu_ram">CPU and RAM</a></li>
+        <li><a href="?section=parts&amp;page=mb_gpu">Motherboard and GPU</a></li>
+        <li><a href="?section=parts&amp;page=storage_nic_sd">Storage, network card, sound card</a></li>
+        <li><a href="?section=parts&amp;page=cooling_psu_case">Cooling, PSU, case</a></li>
+        <li><a href="?section=parts&amp;page=accessories">Accessories</a></li>
+        <li><a href="?section=parts&amp;page=quiz">Quiz</a></li>
+      </ul>
     </section>
   </body>
 </html>
