--- a/pages/sitemap.inc.html
+++ b/pages/sitemap.inc.html
@@ -8,6 +8,10 @@
     <meta name="page" content="sitemap" />
     <meta name="section_name" content="" />
     <meta name="page_name" content="Site Map" />
+    <meta name="prev_page_uri" content="" />
+    <meta name="prev_page_name" content="" />
+    <meta name="next_page_uri" content="" />
+    <meta name="next_page_name" content="" />
     <meta name="show_breadcrumbs" content="true" />
     <meta name="show_page_breadcrumb" content="true" />
     <title>Site Map</title>
@@ -22,27 +26,34 @@
         <ul>
           <li><a href=".">Home</a></li>
           <li><a href="?page=sitemap">Site Map</a></li>
-          <li><a href="?">Parts</a>
+          <li><a href="?section=parts">Parts</a>
             <ul>
-              <li><a href="?">Motherboard and CPU</a></li>
-              <li><a href="?">RAM and GPU</a></li>
-              <li><a href="?">Storage, network card, sound card</a></li>
-              <li><a href="?">Cooling, PSU, case</a></li>
-              <li><a href="?">Accessories</a></li>
+              <li><a href="?section=parts&amp;page=cpu_ram">CPU and RAM</a></li>
+              <li><a href="?section=parts&amp;page=mb_gpu">Motherboard and GPU</a></li>
+              <li><a href="?section=parts&amp;page=storage_nic_sd">Storage, network card, sound card</a></li>
+              <li><a href="?section=parts&amp;page=cooling_psu_case">Cooling, PSU, case</a></li>
+              <li><a href="?section=parts&amp;page=accessories">Accessories</a></li>
+              <li><a href="?section=parts&amp;page=quiz">Quiz</a></li>
             </ul>
           </li>
-          <li><a href="?">Part Vendors</a></li>
-          <li><a href="?">Operating Systems</a>
+          <li><a href="?section=vendors">Part Vendors</a>
             <ul>
-              <li><a href="?">Windows</a></li>
-              <li><a href="?">Linux</a></li>
-              <li><a href="?">Macintosh</a></li>
+              <li><a href="?section=vendors&amp;page=quiz">Quiz</a></li>
             </ul>
           </li>
-          <li><a href="?">Assembling the PC</a>
+          <li><a href="?section=oss">Operating Systems</a>
             <ul>
-              <li><a href="?">Hardware</a></li>
-              <li><a href="?">Software</a></li>
+              <li><a href="?section=oss&amp;page=windows">Windows</a></li>
+              <li><a href="?section=oss&amp;page=linux">Linux</a></li>
+              <li><a href="?section=oss&amp;page=osx">Mac OS X</a></li>
+              <li><a href="?section=oss&amp;page=quiz">Quiz</a></li>
+            </ul>
+          </li>
+          <li><a href="?section=assembly">Assembling the PC</a>
+            <ul>
+              <li><a href="?section=assembly&amp;page=hardware">Hardware</a></li>
+              <li><a href="?section=assembly&amp;page=software">Software</a></li>
+              <li><a href="?section=assembly&amp;page=quiz">Quiz</a></li>
             </ul>
           </li>
         </ul>
