--- a/pages/template.inc.html
+++ b/pages/template.inc.html
@@ -8,6 +8,10 @@
     <meta name="page" content="random_page" />
     <meta name="section_name" content="Random Section" />
     <meta name="page_name" content="Random Page" />
+    <meta name="prev_page_uri" content="?section=random&amp;page=random" />
+    <meta name="prev_page_name" content="Previous Random Page" />
+    <meta name="next_page_uri" content="?section=random&amp;page=random" />
+    <meta name="next_page_name" content="Next Random Page" />
     <meta name="show_breadcrumbs" content="true" />
     <meta name="show_page_breadcrumb" content="true" />
     <title>Page Template</title>
