--- a/pages/home.inc.html
+++ b/pages/home.inc.html
@@ -8,6 +8,10 @@
     <meta name="page" content="home" />
     <meta name="section_name" content="" />
     <meta name="page_name" content="Home" />
+    <meta name="prev_page_uri" content="" />
+    <meta name="prev_page_name" content="" />
+    <meta name="next_page_uri" content="" />
+    <meta name="next_page_name" content="" />
     <meta name="show_breadcrumbs" content="false" />
     <meta name="show_page_breadcrumb" content="false" />
     <title></title>
