Fixed typo and regex typo

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ PORPOSE: Contains layout, includes everything, loads content pages via AJAX.
               <ul>
                 <li><a href="?section=parts">Parts</a></li>
                 <li><a href="?section=parts&amp;page=mb_gpu">Motherboard and GPU</a></li>
-                <li><a href="?section=parts&amp;page=storage_nic_sd">Storage, network card, sound card</a></li>
+                <li><a href="?section=parts&amp;page=storage_nic_sc">Storage, network card, sound card</a></li>
                 <li><a href="?section=parts&amp;page=cooling_psu_case">Cooling, PSU, case</a></li>
                 <li><a href="?section=parts&amp;page=accessories">Accessories</a></li>
                 <li><a href="?section=parts&amp;page=quiz">Quiz</a></li>
@@ -104,9 +104,9 @@ PORPOSE: Contains layout, includes everything, loads content pages via AJAX.
 
         <div id="breadcrumbs">
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Parts</a></li>
-            <li><a href="#">CPU</a></li>
+            <li><a href="#">TMP Home</a></li>
+            <li><a href="#">TMP Section</a></li>
+            <li><a href="#">TMP Page</a></li>
           </ul>
         </div>
 
@@ -117,7 +117,7 @@ PORPOSE: Contains layout, includes everything, loads content pages via AJAX.
         <div id="site-footer">
           <div class="site-footer-box">
             <p><b>Search</b></p>
-            <input id="search" type="text" name="search" placeholder="Search ..." oninput="start()" onblur="stop()" onfocus="start()">
+            <input id="search" type="text" name="search" placeholder="Search ..." oninput="start()" onblur="stop()" onfocus="start()" />
           </div>
 
           <div class="site-footer-box">
