--- a/pages/sitemap.inc.html
+++ b/pages/sitemap.inc.html
@@ -30,7 +30,7 @@
             <ul>
               <li><a href="?section=parts&amp;page=cpu_ram">CPU and RAM</a></li>
               <li><a href="?section=parts&amp;page=mb_gpu">Motherboard and GPU</a></li>
-              <li><a href="?section=parts&amp;page=storage_nic_sd">Storage, network card, sound card</a></li>
+              <li><a href="?section=parts&amp;page=storage_nic_sc">Storage, network card, sound card</a></li>
               <li><a href="?section=parts&amp;page=cooling_psu_case">Cooling, PSU, case</a></li>
               <li><a href="?section=parts&amp;page=accessories">Accessories</a></li>
               <li><a href="?section=parts&amp;page=quiz">Quiz</a></li>
