Added prev/next links.

--- a/index.html
+++ b/index.html
@@ -110,6 +110,12 @@ PORPOSE: Contains layout, includes everything, loads content pages via AJAX.
           </ul>
         </div>
 
+        <div id="prev_next_bar">
+          <a id="prev_link" href="#">&larr;</b> <span>...</span></a>
+          <a id="next_link" href="#"><span>...</span> &rarr;</a>
+          <div class="clearfix"></div>
+        </div>
+
         <main id="content" />
       </div>
     </div>
