--- a/pages/assembly/assembly.inc.html
+++ b/pages/assembly/assembly.inc.html
@@ -10,7 +10,7 @@
     <meta name="page_name" content="Assembling the PC" />
     <meta name="prev_page_uri" content="?section=oss&amp;page=quiz" />
     <meta name="prev_page_name" content="Operating Systems: Quiz" />
-    <meta name="next_page_uri" content="?section=assembly&amp;page?hardware" />
+    <meta name="next_page_uri" content="?section=assembly&amp;page=hardware" />
     <meta name="next_page_name" content="Assembling the PC: Hardware" />
     <meta name="show_breadcrumbs" content="true" />
     <meta name="show_page_breadcrumb" content="false" />
