--- a/pages/oss/osx.inc.html
+++ b/pages/oss/osx.inc.html
@@ -8,7 +8,7 @@
     <meta name="page" content="osx" />
     <meta name="section_name" content="Operating Systems" />
     <meta name="page_name" content="Mac OS X" />
-    <meta name="prev_page_uri" content="section=oss&amp;page=linux" />
+    <meta name="prev_page_uri" content="?section=oss&amp;page=linux" />
     <meta name="prev_page_name" content="Operating Systems: Linux" />
     <meta name="next_page_uri" content="?section=oss&amp;page=quiz" />
     <meta name="next_page_name" content="Operating Systems: Quiz" />
