--- a/pages/parts/parts.inc.html
+++ b/pages/parts/parts.inc.html
@@ -10,8 +10,8 @@
     <meta name="page_name" content="Parts" />
     <meta name="prev_page_uri" content="" />
     <meta name="prev_page_name" content="" />
-    <meta name="next_page_uri" content="" />
-    <meta name="next_page_name" content="" />
+    <meta name="next_page_uri" content="?section=parts&amp;page=cpu_ram" />
+    <meta name="next_page_name" content="Parts: CPU and RAM" />
     <meta name="show_breadcrumbs" content="true" />
     <meta name="show_page_breadcrumb" content="false" />
     <title>Parts</title>
