--- a/pages/oss/linux.inc.html
+++ b/pages/oss/linux.inc.html
@@ -8,9 +8,9 @@
     <meta name="page" content="linux" />
     <meta name="section_name" content="Operating Systems" />
     <meta name="page_name" content="Linux" />
-    <meta name="prev_page_uri" content="section=oss&amp;page=windows" />
+    <meta name="prev_page_uri" content="?section=oss&amp;page=windows" />
     <meta name="prev_page_name" content="Operating Systems: Windows" />
-    <meta name="next_page_uri" content="section=oss&amp;page=osx" />
+    <meta name="next_page_uri" content="?section=oss&amp;page=osx" />
     <meta name="next_page_name" content="Mac OS X" />
     <meta name="show_breadcrumbs" content="true" />
     <meta name="show_page_breadcrumb" content="true" />
