Removed closing b tag.

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ PORPOSE: Contains layout, includes everything, loads content pages via AJAX.
         </div>
 
         <div id="prev_next_bar">
-          <a id="prev_link" href="#">&larr;</b> <span>...</span></a>
+          <a id="prev_link" href="#">&larr; <span>...</span></a>
           <a id="next_link" href="#"><span>...</span> &rarr;</a>
           <div class="clearfix"></div>
         </div>
