ajax fix for locale, bruker http://, istedenfor fil
Drep meg hvis detet blir feil

--- a/pages/home.inc.html
+++ b/pages/home.inc.html
@@ -24,12 +24,12 @@
       </header>
 
       <figure class="float-right">
-        <img width="256px" src="/images/logo/logo_512.png" />
+        <img width="256px" src="images/logo/logo_512.png" />
         <figcaption>Figure test</figcaption>
       </figure>
 
       <figure class="float-right">
-        <img class="spin" src="/images/loading.png" />
+        <img class="spin" src="images/loading.png" />
         <figcaption>Loading</figcaption>
       </figure>
 
