Updates P3 and polished banner.

--- a/documents/p3_changes.html
+++ b/documents/p3_changes.html
@@ -41,9 +41,17 @@
             </header>
 
             <ul>
-              <li>[28.10.2016] Changed logo.</li>
-              <li>[31.10.2016] The highlighting feature was dropped, because its use was limited and it required very little JavaScript coding
-                Runar, which was assigned to this task, will instead implement the quiz validation feature which originally was assigned to Petter.</li>
+              <li>[2016.10.28] Changed logo.</li>
+              <li>[2016.10.31] The highlighting feature was dropped, because its use was limited and it required very little JavaScript coding.
+              Runar, which was assigned to this task, will instead implement the quiz validation feature which originally was assigned to Petter.</li>
+              <li>[2016.11.02] The "beginner/expert mode" feature was dropped, because no potential uses were clear. This task was assigned to Thomas.
+              As of now, each member has one feature to work on or previously worked on.</li>
+              <li>[2016.11.02] Petter is not entirely finished with the search feature, and has been granted another week to finish it.
+              Thomas is not finished with the dynamic breadcrumbs feature, and has also been granted another week to finish it.</li>
+              <li>[2016.11.02] Since the distribution of content writing was not mentioned in the product specification, it will be specified here.
+              Petter will write the "Parts" section. Runar will write the "Part Vendors" section, and possibly help with the "Windows" page in the "Operating Systems" section.
+              Thomas will write most of the "Operating Systems" section. H&aring;vard will write the "Assembling the PC" section.
+              The deadline for this is early November 13th.</li>
             </ul>
           </section>
         </main>
