--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 FILE NAME: index.html
 WRITTEN BY: H&aring;vard, Runar, Petter, Thomas
 WHEN: 2016 autumn
-PORPOSE: Contains layout, includes everything, loads content pages via AJAX.
+PORPOSE: Main webpage, loads content pages through AJAX.
 -->
 
 <!DOCTYPE html>
@@ -29,12 +29,12 @@ PORPOSE: Contains layout, includes everything, loads content pages via AJAX.
     <link rel="stylesheet" href="style/site.css" />
     <!-- Fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono|Roboto+Slab">
-	<style>	
+	<style>
 
 	.dropdownContent {
 		display: none;
 		position: absolute;
-		
+
 	}
 
 	.dropdownContent a {
@@ -66,7 +66,8 @@ PORPOSE: Contains layout, includes everything, loads content pages via AJAX.
       <div id="site-header">
         <img id="site-header-logo" src="images/logo/logo_white_64.png" alt="logo" />
         <p id="site-header-title"><a href=".">Build-a-PC</a></p>
-        <p id="site-header-sub-title">by Ad Infinitum</p>
+        <p id="site-header-sub-title">by <a href="https://github.com/build-a-pc"
+          title="Ad Infinitum: H&aring;vard, Runar, Petter, Thomas" target="_blank">Ad Infinitum</a></p>
       </div>
     </div>
 
@@ -149,13 +150,13 @@ PORPOSE: Contains layout, includes everything, loads content pages via AJAX.
             <p><b>Links</b></p>
             <ul>
               <li><a href="?page=sitemap">Site map</a></li>
-              <li><a href="documents/">Project documents</a></li>
-              <li><a href="https://github.com/build-a-pc/build-a-pc.github.io">Repository</a></li>
-              <li><a href="https://github.com/build-a-pc/build-a-pc.github.io/issues/new">Report a problem</a></li>
+              <li><a href="documents/" target="_blank">Project documents</a></li>
+              <li><a href="https://github.com/build-a-pc/build-a-pc.github.io" target="_blank">Repository</a></li>
+              <li><a href="https://github.com/build-a-pc/build-a-pc.github.io/issues/new" target="_blank">Report a problem</a></li>
             </ul>
           </div>
 
-          <p id="copyright">Copyright &copy; 2016 <a href="https://github.com/build-a-pc">github.com/build-a-pc</a></p>
+          <p id="copyright">Copyright &copy; 2016 <a href="https://github.com/build-a-pc" target="_blank">github.com/build-a-pc</a></p>
         </div>
       </div>
     </div>
