Moved some search stuff.

--- a/index.html
+++ b/index.html
@@ -139,9 +139,10 @@ PORPOSE: Main webpage, loads content pages through AJAX.
         <div id="site-footer">
           <div class="site-footer-box">
             <p><b>Search</b></p>
-            <input id="search" type="text" name="search" placeholder="Search ..." oninput="start()" onblur="stop()" onfocus="start()" />
-			<div id="dropdown" class="dropdownContent">
-			</div>
+            <div class="search">
+              <input id="search" type="text" name="search" placeholder="Search ..." oninput="start()" onblur="stop()" onfocus="start()" />
+  			      <div id="dropdown" class="dropdownContent"></div>
+            </div>
           </div>
 
           <div class="site-footer-box">
